<resources>
    <string name="app_name">Waste Recycle Adviser</string>
    <string name="nav_header_title">Waste Recycle Adviser</string>
    <string name="nav_header_subtitle">Nihon Waste Wise </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem" />
    <string name="Notification" />
    <string name="Location" />
    <string name="WasteGuidelines">Waste Guidelines</string>
    <string name="type" />
    <string name="description" />
    <string name="guidelines" />
    <string name="Switch" />
    <string name="guidelines_placeholder">guidelines</string>
    <string name="description_placeholder">description</string>
    <string name="type_placeholder">type</string>
    <string name="OK">ok</string>
    <string name="sorry_your_location_is_not_in_database_please_send_us_the_brochure_photo_so_we_can_add_it_for_you">Sorry your location is not in database please send us the brochure photo so we can add it for you</string>
    <string name="camera">Camera</string>
    <string name="please_confirm_your_location">Confirm Your Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="an_error_occurred" />
    <string name="close">close</string>
    <string name="error_occurred">Error occurred</string>


</resources>