<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_wasteCatalog"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/WasteGuidelines" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />

    </group>
</menu>