<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recycleappv1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.example.recycleappv1.ui.reminder.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder" />
    <fragment
        android:id="@+id/nav_wasteCatalog"
        android:name="com.example.recycleappv1.ui.wastecatalog.WasteCatalog"
        android:label="fragment_waste_catalog"
        tools:layout="@layout/fragment_waste_catalog" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.recycleappv1.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/firstScreen"
        android:name="com.example.recycleappv1.ui.onboarding.screens.FirstScreen"
        android:label="fragment_first_screen"
        tools:layout="@layout/fragment_first_screen" >
        <action
            android:id="@+id/action_firstScreen_to_secondScreen3"
            app:destination="@id/secondScreen" />
        <action
            android:id="@+id/action_firstScreen_to_thirdScreen2"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondScreen"
        android:name="com.example.recycleappv1.ui.onboarding.screens.SecondScreen"
        android:label="fragment_second_screen"
        tools:layout="@layout/fragment_second_screen" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.recycleappv1.ui.onboarding.screens.LocationFragment"
        android:label="fragment_third_screen"
        tools:layout="@layout/fragment_third_screen" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.recycleappv1.ui.onboarding.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.example.recycleappv1.ui.onboarding.ViewPagerFragment"
        android:label="fragment_view_pager"
        tools:layout="@layout/fragment_view_pager" />


</navigation>